tests/fixtures/invalid/pow_dict_dict_dict.py
# Cannot call pow() with Dict[str, int], Dict[str, int], Dict[str, int]
x = pow({"a": 1}, {"a": 1}, {"a": 1})
